# adnipy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  appveyor.yml  environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
adnipy/: __init__.py  adni.py  adnipy.py  data.py
docs/: Makefile  adnipy.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: __init__.py  test_adni.py  test_adnipy.py  test_data.py
